; ModuleID = '/home/carl/AnghaBench/brotli/c/enc/extr_entropy_encode.c_BrotliReverseBits.c'
source_filename = "/home/carl/AnghaBench/brotli/c/enc/extr_entropy_encode.c_BrotliReverseBits.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@BrotliReverseBits.kLut = internal constant [16 x i64] [i64 0, i64 8, i64 4, i64 12, i64 2, i64 10, i64 6, i64 14, i64 1, i64 9, i64 5, i64 13, i64 3, i64 11, i64 7, i64 15], align 16
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i64, i32)* @BrotliReverseBits to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @BrotliReverseBits(i64 %0, i32 %1) #0 {
  %3 = alloca i64, align 8
  %4 = alloca i32, align 4
  %5 = alloca i64, align 8
  %6 = alloca i64, align 8
  store i64 %0, i64* %3, align 8
  store i32 %1, i32* %4, align 4
  %7 = load i32, i32* %4, align 4
  %8 = and i32 %7, 15
  %9 = sext i32 %8 to i64
  %10 = getelementptr inbounds [16 x i64], [16 x i64]* @BrotliReverseBits.kLut, i64 0, i64 %9
  %11 = load i64, i64* %10, align 8
  store i64 %11, i64* %5, align 8
  store i64 4, i64* %6, align 8
  br label %12

12:                                               ; preds = %28, %2
  %13 = load i64, i64* %6, align 8
  %14 = load i64, i64* %3, align 8
  %15 = icmp ult i64 %13, %14
  br i1 %15, label %16, label %31

16:                                               ; preds = %12
  %17 = load i64, i64* %5, align 8
  %18 = shl i64 %17, 4
  store i64 %18, i64* %5, align 8
  %19 = load i32, i32* %4, align 4
  %20 = ashr i32 %19, 4
  store i32 %20, i32* %4, align 4
  %21 = load i32, i32* %4, align 4
  %22 = and i32 %21, 15
  %23 = sext i32 %22 to i64
  %24 = getelementptr inbounds [16 x i64], [16 x i64]* @BrotliReverseBits.kLut, i64 0, i64 %23
  %25 = load i64, i64* %24, align 8
  %26 = load i64, i64* %5, align 8
  %27 = or i64 %26, %25
  store i64 %27, i64* %5, align 8
  br label %28

28:                                               ; preds = %16
  %29 = load i64, i64* %6, align 8
  %30 = add i64 %29, 4
  store i64 %30, i64* %6, align 8
  br label %12

31:                                               ; preds = %12
  %32 = load i64, i64* %3, align 8
  %33 = sub i64 0, %32
  %34 = and i64 %33, 3
  %35 = load i64, i64* %5, align 8
  %36 = lshr i64 %35, %34
  store i64 %36, i64* %5, align 8
  %37 = load i64, i64* %5, align 8
  %38 = trunc i64 %37 to i32
  ret i32 %38
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
